metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>ARR based on this quote&apos;s line numbers and subscription term</description>
    <formula>SBQQ__NetAmount__c * 12 /  SBQQ__Opportunity2__r.Opportunity_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>