metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>In most cases we want to bill In Advance, but we&apos;ve had a few exceptions where we needed to bill In Arrears.</description>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingType</valueSetName>
    </valueSet>
</CustomField>