metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Currency_Rate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>