metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/First_Year_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Year_Contract_Value__c</fullName>
    <label>First Year Contract Value</label>
    <summarizedField>SBQQ__QuoteLine__c.First_Year_Line_Value__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>