metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Distributor_Discount__c.field-meta.xml
<CustomField>
    <fullName>Has_Distributor_Discount__c</fullName>
    <formula>SBQQ__DistributorDiscount__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Distributor Discount</label>
    <type>Checkbox</type>
</CustomField>