metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Free_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Has_Free_Form_Text__c</fullName>
    <formula>NOT(ISBLANK(Line_Items_Header_Text__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Free Form Text</label>
    <type>Checkbox</type>
</CustomField>