metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Line_Items_Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Has_Line_Items_Footer_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created in the scope of https://ws-lambda.atlassian.net/browse/LAMBDA-43745</description>
    <inlineHelpText>Field to determine whether Line items footer is populated or not</inlineHelpText>
    <label>Has Line Items Footer Text</label>
    <type>Checkbox</type>
</CustomField>