metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Has_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This quote has maintenance products. Used to place proper Terms &amp; Conditions on the quote.</description>
    <inlineHelpText>This quote has maintenance products. Used to place proper Terms &amp; Conditions on the quote.</inlineHelpText>
    <label>Maintenance</label>
    <type>Checkbox</type>
</CustomField>