metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Mixed_Success_Level__c.field-meta.xml
<CustomField>
    <fullName>Has_Mixed_Success_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the field will be set to true if more than one success level exist in the line items related to the quore (and their price is &gt; zero)</description>
    <label>Has Mixed Success Level</label>
    <type>Checkbox</type>
</CustomField>