metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_OnPrem__c.field-meta.xml
<CustomField>
    <fullName>Has_OnPrem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This quote has On-Prem products.  Used to place proper Terms &amp; Conditions on the quote.</description>
    <label>On-Prem</label>
    <type>Checkbox</type>
</CustomField>