metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Quote_Notes_Free_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Has_Quote_Notes_Free_Form_Text__c</fullName>
    <description>THIS FIELD HAS BEEN REPLACED BY Has_Line_Items_Footer_Text__c Created in the scope of ticket: https://ws-lambda.atlassian.net/browse/LAMBDA-26318.</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to determine whether user has entered text in &quot;Quote Notes Free Form Text&quot; field.</inlineHelpText>
    <label>Has Quote Notes Free Form Text</label>
    <type>Checkbox</type>
</CustomField>