metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Has_SaaS__c.field-meta.xml
<CustomField>
    <fullName>Has_SaaS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This quote has SaaS products.  Used to place proper Terms &amp; Conditions on the quote.</description>
    <label>SaaS</label>
    <type>Checkbox</type>
</CustomField>