metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Invalid_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LAMBDA-52272 Checkbox field to be set by flow to Checked if Primary Contact is not valid</description>
    <inlineHelpText>Checked if Primary Contact is not valid</inlineHelpText>
    <label>Invalid Primary Contact</label>
    <type>Checkbox</type>
</CustomField>