metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_AR_Quote__c.field-meta.xml
<CustomField>
    <fullName>Is_AR_Quote__c</fullName>
    <description>LAMBDA-63802 Check if the Id of the quote matches with the ID of the AR quote on the opportunity</description>
    <formula>IF(Id== SBQQ__Opportunity2__r.AR_Quote__c ,True,False)</formula>
    <inlineHelpText>This tells if this quote is an AR quote on the related opportunity</inlineHelpText>
    <label>Is AR Quote?</label>
    <type>Checkbox</type>
</CustomField>