metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Billing_Frequency_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Frequency_Same__c</fullName>
    <formula>IMAGE (IF( TEXT(SBQQ__BillingFrequency__c) == TEXT(SBQQ__Opportunity2__r.Current_Billing_Term__c) ,&quot;/img/samples/flag_green.gif&quot;,&quot;/img/samples/flag_red.gif&quot;),&quot;Color&quot;, 20,20)</formula>
    <label>Is Billing Frequency Same</label>
    <type>Text</type>
</CustomField>