metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Master_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Master_Contract__c</fullName>
    <description>LAMBDA-53934 Signify if we the quote is Master contract or not</description>
    <inlineHelpText>Signifies if the Quote is Master contract or not</inlineHelpText>
    <label>Is Master Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Review_Picklist</valueSetName>
    </valueSet>
</CustomField>