metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Not_Blank_Free_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Blank_Free_Form_Text__c</fullName>
    <label>Is Not Blank Free Form Text</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>