metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Not_US__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_US__c</fullName>
    <description>Field to show or hide provider header in quote template</description>
    <formula>Is_US__c != True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Not US</label>
    <type>Checkbox</type>
</CustomField>