metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Quote_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Quote_Expired__c</fullName>
    <description>True if the expiration date is in the past. This is needed to be used in the lightning page because the lightning page doesn&apos;t support filtering by date fields.</description>
    <formula>SBQQ__ExpirationDate__c &lt;  TODAY()</formula>
    <inlineHelpText>True if the expiration date is in the past</inlineHelpText>
    <label>Is Quote Expired?</label>
    <type>Checkbox</type>
</CustomField>