metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Is_Reseller__c</fullName>
    <description>Used in quote templates to determine if &quot;Ship To&quot; address should be shown.</description>
    <formula>OR(SBQQ__Distributor__c != null,  SBQQ__Partner__c != null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reseller</label>
    <type>Checkbox</type>
</CustomField>