metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Subscription_Term_Greater_Than_Year__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription_Term_Greater_Than_Year__c</fullName>
    <description>Field to check whether subscription term is greater than year</description>
    <formula>Max_Term__c  &gt;= 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field to check if the Subscription term is greater Than year</inlineHelpText>
    <label>Is Subscription Term Greater Than Year</label>
    <type>Checkbox</type>
</CustomField>