metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Is_US__c.field-meta.xml
<CustomField>
    <fullName>Is_US__c</fullName>
    <formula>SBQQ__BillingCountry__c == &apos;United States&apos; || SBQQ__BillingCountry__c == &apos;us&apos; || SBQQ__BillingCountry__c == null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is US</label>
    <type>Checkbox</type>
</CustomField>