metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Line_Items_Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Footer_Text__c</fullName>
    <description>Created in the scope of ticket: https://ws-lambda.atlassian.net/browse/LAMBDA-26318.</description>
    <inlineHelpText>Additional text that appears after / under the line items.</inlineHelpText>
    <label>Line Items Footer Text</label>
    <length>36768</length>
    <type>LongTextArea</type>
</CustomField>