metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Line_Items_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Header_Text__c</fullName>
    <inlineHelpText>Additional text that appears before / above the line items.</inlineHelpText>
    <label>Line Items Header Text</label>
    <type>TextArea</type>
</CustomField>