metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <description>LAMBDA-34344: Custom URL field to capture Logo for the Product</description>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>