metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <formula>Logo_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo URL</label>
    <type>Text</type>
</CustomField>