metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Max_Term__c.field-meta.xml
<CustomField>
    <fullName>Max_Term__c</fullName>
    <label>Max Term</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__SubscriptionTerm__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>