metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Non_US_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_US_Provider_Name__c</fullName>
    <label>Non US Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>