metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/O2C_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>O2C_Ticket_Link__c</fullName>
    <description>Link to the Quote Request ticket</description>
    <inlineHelpText>Link to the Quote Request ticket</inlineHelpText>
    <label>O2C Ticket Link</label>
    <type>Url</type>
</CustomField>