metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Type)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>