metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Price_Reset__c.field-meta.xml
<CustomField>
    <fullName>Price_Reset__c</fullName>
    <description>LAMBDA-62391 field to capture price reset flag from the related opportunity</description>
    <formula>Text(SBQQ__Opportunity2__r.Price_Reset__c)</formula>
    <inlineHelpText>Price reset information from the related opportunity</inlineHelpText>
    <label>Price Reset</label>
    <type>Text</type>
</CustomField>