metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(SBQQ__Opportunity2__r.Product__c)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>