metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Approver__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>