metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_ARR__c.field-meta.xml
<CustomField>
    <fullName>Quote_ARR__c</fullName>
    <description>Rollup summary</description>
    <label>Quote ARR</label>
    <summarizedField>SBQQ__QuoteLine__c.ARR__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__ChargeType__c</field>
        <operation>equals</operation>
        <value>Recurring</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>