metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/SalesRepManagerName__c.field-meta.xml
<CustomField>
    <fullName>SalesRepManagerName__c</fullName>
    <label>Sales Rep Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>