metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Subsidiary link set automatically when quote is created/updated</description>
    <inlineHelpText>Subsidiary link set automatically when quote is created/updated</inlineHelpText>
    <label>Service Provider</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>