metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_City__c</fullName>
    <label>Service Provider City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>