metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Country__c</fullName>
    <label>Service Provider Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>