metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <description>ESW entity selling the products on this quote</description>
    <label>Service Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>