metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Postal_Code__c</fullName>
    <label>Service Provider Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>