metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Signature__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Signature__c</fullName>
    <label>Service Provider Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>