metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Signature_Updated__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Signature_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field to check if Service Provider Signature is updated on the Quote</description>
    <label>Service Provider Signature Updated</label>
    <type>Checkbox</type>
</CustomField>