metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_State__c</fullName>
    <label>Service Provider State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>