metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Service_Provider_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Street__c</fullName>
    <label>Service Provider Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>