metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Show_OnPrem_TNC__c.field-meta.xml
<CustomField>
    <fullName>Show_OnPrem_TNC__c</fullName>
    <description>LAMBDA-46895 field created to Exclude long T&amp;C from the draft quotes</description>
    <formula>AND(Has_OnPrem__c, NOT(ISPICKVAL(SBQQ__Status__c,&apos;Draft&apos;)))</formula>
    <inlineHelpText>If Quote has On-Prem product and the Status is NOT Draft</inlineHelpText>
    <label>Show OnPrem TNC</label>
    <type>Checkbox</type>
</CustomField>