metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/Uptick_Amount__c.field-meta.xml
<CustomField>
    <fullName>Uptick_Amount__c</fullName>
    <description>LAMBDA-48031 field to store uptick amount that is required for this product</description>
    <inlineHelpText>The minimum quote amount. It is calculated as the Current ARR times Uptick Multiplier defined in the product configuration.</inlineHelpText>
    <label>Uptick Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>