metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/US_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>US_Provider_Name__c</fullName>
    <label>US Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>