metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/fields/User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Profile_Name__c</fullName>
    <description>LAMBDA-51196 field to fetch the profile name of the logged-in user and use it on the product rule</description>
    <formula>$Profile.Name</formula>
    <inlineHelpText>Profile name of the logged-in user</inlineHelpText>
    <label>User Profile Name</label>
    <type>Text</type>
</CustomField>