metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/DoNotAllowToGoBackToDraftStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotAllowToGoBackToDraftStatus</fullName>
    <active>true</active>
    <description>Prevents changing the status back to draft</description>
    <errorConditionFormula>ISCHANGED(SBQQ__Status__c) &amp;&amp; ISPICKVAL(SBQQ__Status__c, &apos;Draft&apos;) &amp;&amp;  NOT($Setup.Quality_Bars_Configuration__c.Disabled_Quote_QBs__c)</errorConditionFormula>
    <errorDisplayField>SBQQ__Status__c</errorDisplayField>
    <errorMessage>It&apos;s not possible to change the status to Draft. If you need to change the quote, clone this quote using the &apos;Clone with Related&apos; button or create a new one.</errorMessage>
</ValidationRule>