metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/DoNotAllowToSetAsPrimaryIfCancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotAllowToSetAsPrimaryIfCancelled</fullName>
    <active>true</active>
    <description>Ensures that users cannot set a cancelled quote as primary.</description>
    <errorConditionFormula>NOT($Setup.Quality_Bars_Configuration__c.Disabled_Quote_QBs__c)
&amp;&amp; ISCHANGED(SBQQ__Primary__c)
&amp;&amp; SBQQ__Primary__c = TRUE
&amp;&amp; ISPICKVAL(SBQQ__Status__c, &apos;Cancelled&apos;)</errorConditionFormula>
    <errorMessage>Cannot set a cancelled quote as primary.</errorMessage>
</ValidationRule>