metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/StartDateEqualsRenewalDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateEqualsRenewalDate</fullName>
    <active>true</active>
    <description>For Renewal opportunities Quote Start Date should be the same as Opportunity Renewal Date.</description>
    <errorConditionFormula>AND(ISPICKVAL(SBQQ__Opportunity2__r.Type,&apos;Renewal&apos;), SBQQ__Opportunity2__r.Renewal_Date__c!=SBQQ__StartDate__c, SBQQ__Primary__c, NOT($Setup.Quality_Bars_Configuration__c.Disabled_Quote_QBs__c))</errorConditionFormula>
    <errorDisplayField>SBQQ__StartDate__c</errorDisplayField>
    <errorMessage>For Renewal opportunities Quote Start Date should be the same as Opportunity Renewal Date.</errorMessage>
</ValidationRule>