metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/Validate_Mix_Success_Level_Do_Not_Exist.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Mix_Success_Level_Do_Not_Exist</fullName>
    <active>true</active>
    <description>validate that the quote line items do not have products with price more than zero and they belong to different groups</description>
    <errorConditionFormula>Has_Mixed_Success_Level__c &amp;&amp; NOT($Setup.Quality_Bars_Configuration__c.Disabled_Opportunity_QBs__c)</errorConditionFormula>
    <errorMessage>All products on the quote should have the same success level</errorMessage>
</ValidationRule>