metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/ValidatePrimaryContact.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePrimaryContact</fullName>
    <active>false</active>
    <description>LAMBDA-52272 validation to check if the primary contact on the quote belongs to the same Account/Partner on the opportunity</description>
    <errorConditionFormula>Invalid_Primary_Contact__c &amp;&amp; NOT($Setup.Quality_Bars_Configuration__c.Disabled_Quote_QBs__c)</errorConditionFormula>
    <errorDisplayField>SBQQ__PrimaryContact__c</errorDisplayField>
    <errorMessage>The Primary Contact must be associated with the Partner Account (Reseller/Distributor) or Opportunity Account (End User)</errorMessage>
</ValidationRule>