metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/ValidatePrimaryContacV2.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePrimaryContacV2</fullName>
    <active>true</active>
    <description>LAMBDA-56326 validates the primary contact using partner, distributor and related opportunity account</description>
    <errorConditionFormula>AND(
	IsNew() || SBQQ__Primary__c ||CreatedDate &gt; DATETIMEVALUE(DATE(2023, 4, 18)),
    SBQQ__PrimaryContact__c != null,
    SBQQ__Distributor__r.Id != SBQQ__PrimaryContact__r.AccountId,
    SBQQ__Partner__r.Id != SBQQ__PrimaryContact__r.AccountId,
    SBQQ__Opportunity2__r.AccountId != SBQQ__PrimaryContact__r.AccountId
) &amp;&amp; NOT($Setup.Quality_Bars_Configuration__c.Disabled_Quote_QBs__c)</errorConditionFormula>
    <errorDisplayField>SBQQ__PrimaryContact__c</errorDisplayField>
    <errorMessage>The Primary Contact must be associated with the Partner Account (Reseller/Distributor) or Opportunity Account (End User)</errorMessage>
</ValidationRule>