metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/validationRules/ValidateQuoteSubscriptionTerm.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateQuoteSubscriptionTerm</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(SBQQ__SubscriptionTerm__c)</errorConditionFormula>
    <errorMessage>Quote Subscription Term cannot be empty.</errorMessage>
</ValidationRule>