metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/listViews/Computron.listView-meta.xml
<ListView>
    <fullName>Computron</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Computron</value>
    </filters>
    <label>Computron</label>
</ListView>