metadata/sf-prod/force-app/main/default/objects/SBQQ__Quote__c/listViews/Playbooks.listView-meta.xml
<ListView>
    <fullName>Playbooks</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SBQQ__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Playbooks</value>
    </filters>
    <label>Playbooks</label>
</ListView>